Update index Add card + Badge.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div class="card-container">
+    <div class="close">X</div>
+    <div class="badge">9</div>
       <div class="card">
         <img
           src="https://www.svgrepo.com/show/429787/human-man-10.svg"
